--- a/Tarefa_Trilha_2_Glesia_Menezes_Coleta_de_Dados_e_Armazenamento_.ipynb
+++ b/Tarefa_Trilha_2_Glesia_Menezes_Coleta_de_Dados_e_Armazenamento_.ipynb
@@ -6,7 +6,6 @@
       "name": "Tarefa Trilha 2 - Glesia Menezes - Coleta de Dados e Armazenamento  .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNKx2LzajU5I2lnRQ3XJKbo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +30,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9-Lgs7m7S-lk"
+      },
+      "source": [
+        "https://github.com/menezesglesia/Tarefas-P-s/blob/main/Tarefa_Trilha_2_Glesia_Menezes_Coleta_de_Dados_e_Armazenamento_.ipynb"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "yBZwnu6MF45M"
       },
       "source": [
@@ -38,7 +48,7 @@
         "import requests\n",
         "from bs4 import BeautifulSoup"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +66,7 @@
         "    print('Requisição bem sucedida!')\n",
         "    content = req.content"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +86,7 @@
         "soup = BeautifulSoup(content, 'html.parser')\n",
         "table = soup.find(name='table')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +97,7 @@
       "source": [
         "table = soup.find(name='table', attrs={'id':'confs_standings_W'})"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +128,7 @@
         "url = 'https://www.basketball-reference.com/leagues/NBA_{}_totals.html'\n",
         "df = scrape_stats(url, 2013, 2020)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +155,7 @@
         "df = df[df.index.duplicated()]\n",
         "df.reset_index(inplace=True)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +167,7 @@
         "drop_indexes = df[df['Rk'] == 'Rk'].index # Pega indexes onde a coluna 'Rk' possui valor 'Rk'\n",
         "df.drop(drop_indexes, inplace=True) # elimina os valores dos index passados da tabela"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +179,7 @@
         "numeric_cols = df.columns.drop(['Player','Pos','Tm'])\n",
         "df[numeric_cols] = df[numeric_cols].apply(pd.to_numeric)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +196,7 @@
         "\n",
         "sns.lineplot(x='Year', y='3PA', data=df)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
